# testCython

./: CMakeLists.txt  Readme.md  main.cpp  main.py
lib/: main.py
python/: compile.py  libcustomDataset.c  libcustomDataset.py  libinference.c  libinference.py  libmodel.c  libmodel.py  libtrain.c  libtrain.py  main.py
